--- a/assets/style.css
+++ b/assets/style.css
@@ -458,10 +458,14 @@
 
 @media (max-width:600px) {
 
-    #nav1,
-    #nav2 {
+    #nav1{
         padding: 5px 20px;
     }
+
+     #nav2 {
+        padding: 16px 20px;
+        border-bottom: 0.1px solid;
+     }
 
 
     #nav1 #nav1_part1,
@@ -697,10 +701,14 @@
 
 @media (min-width: 601px) and (max-width: 1024px) {
 
-    #nav1,
-    #nav2 {
+    #nav1 {
         padding: 5px 20px;
     }
+
+     #nav2 {
+        padding: 16px 20px;
+        border-bottom: 0.1px solid;
+     }
 
 
     #nav1 #nav1_part1,
@@ -808,7 +816,7 @@
     }
 
     #hero_left_section #hero_content .collection {
-               font-size: 0.675rem;
+               font-size: 0.875rem;
                font-weight: bold;
      }
 
