--- a/assets/style.css
+++ b/assets/style.css
@@ -446,12 +446,78 @@
 }
 
 
+.scroll-reveal {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.8s ease-out;
+}
+
+.scroll-reveal.show {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 
 
 
 
 
+
+/* card section -------------------------------------------------------------------------------------------------- */
+
+
+#card_main_section{
+    padding: 20px 110px;
+    background-color: var(--background-color);
+   
+}
+
+
+#fourcard_section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  
+}
+
+.card{
+    width: 25%;
+    padding: 20px 15px;
+    height: 100%;
+    transition: 1s ease;
+}
+
+.card:hover{
+    transform: translateY(-5px);
+      
+}
+
+.card:hover i {
+  color: var(--accent-color);
+}
+
+
+.card i{
+    font-size: 2.5rem;
+    color: var(--heading-color);
+    margin-bottom: 15px;
+}
+
+
+.card h3{
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: var(--heading-color);
+}
+
+.card p{
+    font-size: 0.9rem;
+    color: color-mix(in srgb, var(--default-color), transparent 20%);
+    line-height: 1.5;
+}
 
 /* mobile responsive -------------------------------------------------------------------------------------------------- */
 
@@ -672,6 +738,23 @@
 
 
 
+#card_main_section {
+    padding: 20px 10px;
+}
+
+.card{
+     width: 100%;
+}
+
+
+#fourcard_section {
+   flex-direction:column;
+}
+
+.card {
+    padding: 20px 0px;
+}
+
 }
 
 
@@ -881,6 +964,22 @@
     #hero_right_section{
         padding-top: 50px;
     }
+
+
+
+
+
+    #card_main_section {
+    padding: 20px 10px;
+}
+
+
+
+
+.card {
+        width: 45%;
+    padding: 20px 12px;
+}
 
    
      
