--- a/assets/style.css
+++ b/assets/style.css
@@ -631,8 +631,8 @@
 }
 
 
-#best_fourproduct_section{
-    display:flex;
+#best_fourproduct_section {
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 25px;
@@ -732,7 +732,7 @@
 
 #best_product_section .products .hover_product {
     position: absolute;
-    right: 0;
+    left: 0;
     opacity: 0;
     transition: 0.5s ease;
 
@@ -809,10 +809,10 @@
     font-size: 0.875rem;
     font-weight: 500;
     transition: background-color 0.3s ease;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-#best_product_section .cart_button_section .cart_button i{
+#best_product_section .cart_button_section .cart_button i {
     font-size: 1rem;
     margin-right: .5rem;
 }
@@ -1081,10 +1081,30 @@
     }
 
 
+    /* Best Sellers section -------------------------------------------------------------------------------------------------- */
 
 
+    #best_seller_section {
+        padding: 60px 10px;
+    }
 
+    #best_product_section {
+        width: 100%;
 
+    }
+
+    #best_fourproduct_section {
+        flex-direction: column;
+    }
+
+    #best_heading_section {
+        text-align: center;
+    }
+
+    #best_product_section .products img {
+        width: 100%;
+        height: 100%;
+    }
 
 
 
@@ -1296,6 +1316,37 @@
         width: 45%;
         padding: 20px 12px;
     }
+
+
+
+
+
+
+
+
+
+    /* Best Sellers section -------------------------------------------------------------------------------------------------- */
+
+
+    #best_fourproduct_section {
+        flex-wrap: wrap;
+    }
+
+    #best_seller_section {
+        padding: 60px 10px;
+    }
+
+    #best_heading_section {
+        text-align: center;
+    }
+
+    #best_product_section {
+       width: 45%;
+    }
+
+
+
+
 
 
 
